# checkers

./: .gitignore  QUICK_START.md  README.md  THREEFOLD_REPETITION.md  board.py  checkers_cli.py  checkers_env.py  claude.md  play_mcts.py  pyproject.toml  setup.py  uct_mcts.py
data/: value_network_dataset_100.pkl
runs/checkers_cnn/: events.out.tfevents.1764365602.Bens-MacBook-Pro.64824.0  events.out.tfevents.1764366962.Bens-MacBook-Pro.70489.0
src/checkers/: __init__.py
src/checkers/ai/: __init__.py  checkpoint_manager.py  cnn_player.py  config.py  dataset.py  evaluate.py  experience.py  minimax.py  rl_config.py  (+11 more)
src/python_checkers.egg-info/: PKG-INFO  SOURCES.txt
test/: __init__.py  analyze_value_dataset.py  debug_game_12.py  generate_value_dataset.py  inspect_value_dataset.py  play_cli_with_mcts.py  play_cli_with_network_mcts.py  play_cnn_policy.py  play_gui.py  play_mcts.py  play_vs_ai.py  test_ai.py  test_board.py  test_checkpoint_manager_first_iteration.py  test_cnn_forward_pass.py  test_cnn_input.py  test_cnn_player_inverse.py  test_forward_pass_on_model.py  test_masked_softmax_verification.py  test_pdn_generator.py  test_pdn_manual.py  test_pdn_parser.py  test_piece.py  test_rl_config_timestamp.py  test_self_play_on_first_iteration.py  test_softmax_sampling.py  test_threefold_repetition.py  test_threefold_simple.py  test_train_masked_softmax.py  test_value_network_dataset.py  test_value_network_initialization.py  test_value_network_outputs.py  test_value_network_real_positions.py  train_reinforcement_learning.py  train_supervised.py  train_value_network.py
(+12 files in other folders)
