[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-checkers"
version = "1.0.0"
description = "A checkers game implementation with AI and neural networks"
requires-python = ">=3.9"
dependencies = [
    "pygame>=2.0.0",
    "numpy>=1.20.0",
    "torch>=2.0.0",
]

[project.scripts]
checkers-gui = "checkers.gui.game_control:main"
checkers-cli = "checkers.cli.interface:main"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["src/checkers"]
